--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "nodemon": "^2.0.20",
-    "prettier": "^2.8.1",
-    "sequelize-cli": "^6.5.2"
+    "prettier": "^2.8.1"
   },
   "dependencies": {
     "@hapi/boom": "^10.0.0",
@@ -33,6 +32,7 @@
     "mysql2": "^2.3.3",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.28.0"
+    "sequelize": "^6.28.0",
+    "sequelize-cli": "^6.5.2"
   }
 }
